--- a/trellis/group_vars/all/users.yml
+++ b/trellis/group_vars/all/users.yml
@@ -7,16 +7,16 @@ users:
     groups:
       - "{{ web_group }}"
     keys:
-      - "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-       - https://github.com/josedu90.keys
+      - "{{ lookup('file', '~/.ssh/id_rsa_personal.pub') }}"
+       #- https://github.com/josedu90.keys
    
   - name: "{{ admin_user }}"
     groups:
       - sudo
     keys:
-      - "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+      - "{{ lookup('file', '~/.ssh/id_rsa_personal.pub') }}"
 
-       - https://github.com/josedu90.keys
+       #- https://github.com/josedu90.keys
 
 
 web_user: web
